interceptors/2.1/_index.md
---
title: "Jakarta Interceptors 2.1"
date: 2022-01-26
summary: "Release for Jakarta EE 10"
---
Jakarta Interceptors defines a means of interposing on business method invocations and specific
events—such as lifecycle events and timeout events—that occur on instances of Jakarta EE components
and other managed classes.

### New features, enhancements or additions
<!-- List here -->
* Updated dependencies for Jakarta EE 10
* Added module-info descriptor

### Removals, deprecations or backwards incompatible changes
<!-- List here -->
* None

### Minimum Java SE Version
<!-- Specify the minimum required Java SE version for this specification -->
**Java SE 11 or higher**

# Details

* [Jakarta Interceptors 2.1 Release Record](https://projects.eclipse.org/projects/ee4j.interceptors/releases/2.1)
* [Jakarta Interceptors 2.1 Specification Document](./jakarta-interceptors-spec-2.1.pdf) (PDF)
* [Jakarta Interceptors 2.1 Specification Document](./jakarta-interceptors-spec-2.1.html) (HTML)
* [Jakarta Interceptors 2.1 Javadoc](./apidocs)
* [Jakarta Contexts Dependency Injection 4.0 TCK](https://download.eclipse.org/jakartaee/cdi/4.0/cdi-tck-4.0.0-dist.zip) ([sig](TBD_post_ballot), [sha](7671d6895eb57b74b52e46b63adfeb57adf965dd91efc673db21a781fedc452f), [pub](https://raw.githubusercontent.com/jakartaee/specification-committee/master/jakartaee-spec-committee.pub))
  * For all TCK releases, see [download directory](https://download.eclipse.org/jakartaee/cdi/4.0/)
* Maven coordinates
  * [jakarta.interceptor:jakarta.interceptor-api:jar:2.1.0](https://central.sonatype.com/artifact/jakarta.interceptor/jakarta.interceptor-api/2.1.0/jar)


# Compatible Implementations

* [Weld 5.0.0.Beta1](https://weld.cdi-spec.org/download/)

# Ballots
## Release Review

The Specification Committee Ballot concluded successfully on 2022-04-06 with the following results.

| Representative                     | Representative for: | Vote   |
|------------------------------------|---------------------|--------|
| Kenji Kazumura                     | Fujitsu             | +1     |
| Tom Watson, Emily Jiang            | IBM                 | +1     |
| Ed Bratt, Dmitry Kornilov          | Oracle              | +1     |
| Andrew Pielage                     | Payara              | +1     |
| David Blevins, Jean-Louis Monteiro | Tomitribe           | +1     |
| Ivar Grimstad                      | EE4J PMC            | +1     |
| Marcelo Ancelmo, Martijn Verburg   | Participant Members | +1     |
| Werner Keil                        | Committer Members   | +1     |
| Jun Qian                           | Enterprise Members  | no vote |
| Zhai Luchao                        | Enterprise Members  | +1     |  
|                                    | **Total**           | **9** |

The ballot was run in the [jakarta.ee-spec mailing list](https://www.eclipse.org/lists/jakarta.ee-spec/msg02303.html)

## Plan Review

The Specification Committee Ballot completed on 2022-01-26.

| Representative                      | Representative for:    | Vote |
|-------------------------------------|------------------------|------|
| Kenji Kazumura                      | 	Fujitsu             | 	+1 |
| Tom Watson, Emily Jiang             | 	IBM                 | 	+1 |
| Ed Bratt, Dmitry Kornilov           | 	Oracle              | 	+1 |
| Andrew Pielage, Matt Gill           | 	Payara              | 	+1 |
| David Blevins, Jean-Louis Monteiro  | 	Tomitribe           | 	+1 |
| Ivar Grimstad                       | 	EE4J PMC            | 	+1 |
| Marcelo Ancelmo, Martijn Verburg    | 	Participant Members | 	+1 |
| Werner Keil                         | 	Committer Members   | 	+1 |
| Jun Qian.                           | Enterprise Members     | 	+1 |
| Zhai Luchao                         | Enterprise Members     | 	+1 |
|                                     | Total                  | 	10 |


The ballot was run in the [jakarta.ee-spec mailing list](https://www.eclipse.org/lists/jakarta.ee-spec/msg02123.html)

## Release Review

The Specification Committee Ballot TBD.

| Representative                                 | Representative for: | Vote |
|------------------------------------------------|---------------------|------|
| Kenji Kazumura                                 | Fujitsu             | +1   |
| Dan Bandera, Kevin Sutter                      | IBM                 | +1   |
| Ed Bratt, Dmitry Kornilov                      | Oracle              | +1   |
| Andrew Pielage, Matt Gill                      | Payara              | +1   |
| David Blevins, Jean-Louis Monteiro             | Tomitribe           | +1   |
| Ivar Grimstad                                  | EE4J PMC            | +1   |
| Marcelo Ancelmo, Martijn Verburg               | Participant Members | +1   |
| Werner Keil                                    | Committer Members   | +1   |
| Scott (Congquan) Wang                          | Enterprise Members  | +1   |
|                                                | Total               | 9    |

The ballot was run in the [jakarta.ee-spec mailing list](TBD)
